# wasm-learning

./: .gitignore  CMakeLists.txt  Makefile  README.md  calculations.html  greeter.html  index.html  test.html
includes/: CMakeLists.txt  app.h
includes/calculations/: main.h
includes/greeter/: main.h
src/: CMakeLists.txt  app.c  check.c
src/calculations/: CMakeLists.txt  integers.c  real_numbers.c
src/greeter/: CMakeLists.txt  main.c
